--- a/Frontend/css/default.css
+++ b/Frontend/css/default.css
@@ -124,3 +124,48 @@ label {
 #clear-private-label {
 	display: none;
 }
+
+/* EMAIL */
+
+.email-table {
+	text-align: left;
+}
+
+.email-table a {
+	color: black;
+}
+
+.container-fluid {
+	padding: 0 7vw 0 7vw;
+}
+
+.new-email-btn {
+	margin-bottom: 10px;
+}
+
+h3 {
+	padding-bottom: 18px;
+}
+
+textarea {
+	margin-top: 10px;
+}
+
+.send-email-form *:focus,
+.pagination li *:focus {
+	box-shadow: none !important;
+	border: 1px solid black !important;
+}
+
+.send-email-form input[type=text] {
+	margin-bottom: 10px;
+
+}
+
+.page-link {
+	margin-top: 5px;
+	padding-top: 12px;
+	height: 47px;
+	vertical-align: middle;
+	color: black !important;
+}
